--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -1,6 +1,7 @@
 \documentclass{book}
 
 % Packages
+
 \usepackage[english]{babel}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -26,8 +27,30 @@
 \maketitle
 
 \tableofcontents
-\part{Topics of Algebraic Topology}
+\part{Topics of Algebra}
 % Chapters
+
+
+\chapter{Category Theory}
+
+
+\chapter{Homological Algebra}
+
+
+\chapter{Group (Cohomology) Theory} 
+
+
+\chapter{(General) Module Theory}
+
+\chapter{Representation Theory}
+
+
+
+
+
+\part{Topics of Algebraic Topology}
+
+
 
 \chapter{Simplical sets and complexes}
 
